--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
 
 <head>
-    <title>Easier Layout</title>
+    <title>easy take 2</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -10,32 +9,28 @@
     <header class="fullSpan">
         header
     </header>
-    <br>
     <nav class="fullSpan">
         nav
     </nav>
-    <div class="container">
-        <aside class="halfSpan">
-            <h1>aside</h1>
-        </aside>
-        <section class="halfSpan">
-            <h1>section</h1>
-            <article>
-                <h2>article</h2>
-                <header id="inArticle">
-                    h1, h2, h3
-                </header>
-                <p id="inArticle">
-                    p
-                </p>
-            </article>
-        </section>
-    </div>
-    <br>
-
+    <aside>
+        <h1>aside</h1>
+    </aside>
+    <section>
+        <h1>section</h1>
+        <article>
+            <h1>article</h1>
+            <header class="inArticle">
+                h1, h2, h3
+            </header>
+            <p class="inArticle">
+                p
+            </p>
+        </article>
+    </section>
     <footer class="fullSpan">
         footer
     </footer>
+
 
 
 </body>
