--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>easy take 2</title>
+    <title>Easier Assignment</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
